fixed bug with incorrect windforce, layout, encoding

--- a/WindConverter/res/values/strings.xml
+++ b/WindConverter/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="inKm">km/h</string>
     <string name="defaultVal">10</string>
     <string name="title_activity_main_activity2">MainActivity2</string>
+    <string name="spacer">"   "</string>
 
 </resources>
